--- a/src/reset.css
+++ b/src/reset.css
@@ -24,6 +24,8 @@ a {
   color: inherit;
 }
 
-.App {
-  background: #141414;
+#root {
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
 }
